Changed buttons and switches constraints

--- a/SpartanHome_const.ucf
+++ b/SpartanHome_const.ucf
@@ -7,8 +7,8 @@ NET "DB<0>" LOC = "R15" |  IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 2;
 NET "DB<1>" LOC = "R16" |  IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 2;
 NET "DB<2>" LOC = "P17" |  IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 2;
 NET "DB<3>" LOC = "M15" |  IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 2;
-NET "rst" LOC = "K17" | IOSTANDARD = LVTTL | PULLDOWN ;
-NET "rst" CLOCK_DEDICATED_ROUTE = False;
+
+NET "rst" LOC = "N17" | IOSTANDARD = LVTTL | PULLUP ;
 
 # soldered 50MHz Clock.
 NET "clk" LOC = "C9" | IOSTANDARD = LVTTL;
@@ -18,5 +18,8 @@ NET "alarm" LOC = "F9" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
 NET "lights" LOC = "E9" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
 NET "music" LOC = "D11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
 
-NET "H" LOC = "N17" | IOSTANDARD = LVTTL | PULLUP ;
-NET "M" LOC = "H18" | IOSTANDARD = LVTTL | PULLUP ;
+NET "H" LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN ;
+NET "H" CLOCK_DEDICATED_ROUTE = False;
+
+NET "M" LOC = "D18" | IOSTANDARD = LVTTL | PULLDOWN ;
+NET "M" CLOCK_DEDICATED_ROUTE = False;
