--- a/SpartanHome_const.ucf
+++ b/SpartanHome_const.ucf
@@ -14,12 +14,15 @@ NET "rst" LOC = "N17" | IOSTANDARD = LVTTL | PULLUP ;
 NET "clk" LOC = "C9" | IOSTANDARD = LVTTL;
 NET "clk" PERIOD = 20.0ns HIGH 50%;
 
-NET "alarm" LOC = "F9" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
-NET "lights" LOC = "E9" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
-NET "music" LOC = "D11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
+#NET "lights" LOC = "F9" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
+#NET "alarm" LOC = "E9" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
+#NET "music" LOC = "D11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
+NET "lights" LOC = "A6" | IOSTANDARD = LVCMOS33 | SLEW = FAST | DRIVE = 8 ;
+NET "alarm" LOC = "B6" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
+NET "music" LOC = "E7" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 8 ;
 
-NET "H" LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN ;
+NET "H" LOC = "D18" | IOSTANDARD = LVTTL | PULLDOWN ;
 NET "H" CLOCK_DEDICATED_ROUTE = False;
 
-NET "M" LOC = "D18" | IOSTANDARD = LVTTL | PULLDOWN ;
+NET "M" LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN ;
 NET "M" CLOCK_DEDICATED_ROUTE = False;
